disable persistent storage for Grafana and resolve the PVC waiting issue

--- a/infra/config/prod/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/prod/monitoring-system/prometheus-stack/values.yaml
@@ -6,6 +6,8 @@ kube-prometheus-stack:
   # Grafana settings for PROD
   grafana:
     adminPassword: "SecurePassword123!"
+    persistence:
+      enabled: false
     grafana.ini:
       server:
         domain: "prod.grafana.local"
