--- a/infra/config/dev/app/backend/values.yaml
+++ b/infra/config/dev/app/backend/values.yaml
@@ -20,3 +20,8 @@ resources:
 
 database:
   host: mongodb.dev.svc.cluster.local
+
+# Enable persistence for uploads in dev
+persistence:
+  enabled: true
+  size: 2Gi
