--- a/infra/addons/backend/values.yaml
+++ b/infra/addons/backend/values.yaml
@@ -55,3 +55,10 @@ external:
     enabled: true
   cloudinary:
     enabled: false
+
+# Persistence for uploads
+persistence:
+  enabled: false
+  size: 5Gi
+  accessMode: ReadWriteOnce
+  # storageClass: ""
