update permission for app/public in dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,10 +18,8 @@ RUN npm rebuild bcrypt
 # Copy application code
 COPY . .
 
-# Copy uploads to public directory
-RUN mkdir -p /app/public/uploads && cp -r /app/uploads/* /app/public/uploads/ || true
-
-RUN mkdir -p /app/logs && chown node:node /app/logs
+# Create logs directory and set permissions
+RUN mkdir -p /app/logs && chown -R node:node /app/logs /app/public
 
 # Non-root user for security
 USER node
