--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,8 +11,14 @@ COPY package*.json ./
 RUN npm ci --only=production
 RUN npm rebuild bcrypt
 
-# Copy all source code including public/
-COPY . .
+# ✅ Copy your public folder
+COPY public ./public
+
+# ✅ Copy your source code
+COPY src ./src
+
+# (Optional) Copy other important files if needed
+# COPY . .
 
 # Ensure logs and public dirs exist with correct permissions
 RUN mkdir -p /app/logs /app/public && chown -R node:node /app/logs /app/public
