--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,12 +11,9 @@ COPY package*.json ./
 RUN npm ci --only=production
 RUN npm rebuild bcrypt
 
-# Copy your app source code and public folder
+COPY src ./src
 COPY public ./public
 
-
-# (Optional) Copy other important files if needed
-COPY . .
 
 # Ensure logs and public dirs exist with correct permissions
 RUN mkdir -p /app/logs /app/public && chown -R node:node /app/logs /app/public
