--- a/monitoring/grafana/datasources.yaml
+++ b/monitoring/grafana/datasources.yaml
@@ -7,5 +7,7 @@ datasources:
   isDefault: true
 - name: Loki
   type: loki
-  url: http://loki.monitoring.svc.cluster.local:3100
+  url: http://loki:3100
   access: proxy
+  jsonData:
+    maxLines: 1000
