Fix Promtail configuration with static http://loki:3100/loki

--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -46,7 +46,7 @@ promtail:
   enabled: true
   config:
     clients:
-      - url: http://{{ include "loki.serviceName" .Subcharts.loki }}:3100/loki/api/v1/push
+      - url: http://loki:3100/loki/api/v1/push
         tenant_id: 1
   resources:
     requests:
