Loki canary to be enabled for Helm tests

--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -34,7 +34,7 @@ loki:
   resultsCache:
     enabled: false
   lokiCanary:
-    enabled: false
+    enabled: true
   gateway:
     enabled: false
   monitoring:
