--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -29,6 +29,12 @@ loki:
       limits:
         cpu: 500m
         memory: 512Mi
+  read:
+    replicas: 0
+  write:
+    replicas: 0
+  backend:
+    replicas: 0
   chunksCache:
     enabled: false
   resultsCache:
