filesystem-based rule storage in Loki

--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -22,8 +22,8 @@ loki:
             period: 24h
     rulerConfig:
       storage:
-        type: filesystem
-        filesystem:
+        type: local
+        local:
           directory: /tmp/loki/rules
   singleBinary:
     replicas: 1
