--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -4,9 +4,6 @@ loki:
   deploymentMode: SingleBinary
   loki:
     auth_enabled: false
-    commonConfig:
-      replication_factor: 1
-      path_prefix: /tmp/loki
     server:
       http_listen_port: 3100
       grpc_listen_port: 9095
@@ -17,11 +14,8 @@ loki:
           chunks_directory: /tmp/loki/chunks
           rules_directory: /tmp/loki/rules
       compactor_address: http://loki:3100
-    storage:
-      type: 'filesystem'
-      filesystem:
-        directory: /tmp/loki/chunks
-    schemaConfig:
+      replication_factor: 1
+    schema_config:
       configs:
         - from: "2024-01-01"
           store: tsdb
@@ -30,7 +24,10 @@ loki:
           index:
             prefix: loki_index_
             period: 24h
-    rulerConfig:
+    storage_config:
+      filesystem:
+        directory: /tmp/loki/chunks
+    ruler:
       storage:
         type: local
         local:
