--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -29,6 +29,11 @@ loki:
         type: local
         local:
           directory: /tmp/loki/rules
+    compactor:
+      working_directory: /tmp/loki/compactor
+      shared_store: filesystem
+      compaction_interval: 10m
+      retention_enabled: false
   singleBinary:
     replicas: 1
     persistence:
