Loki Canary to be enabled

--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -81,7 +81,7 @@ loki:
   resultsCache:
     enabled: false
   lokiCanary:
-    enabled: false
+    enabled: true
   gateway:
     enabled: false
   monitoring:
