--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -4,55 +4,10 @@ loki:
   deploymentMode: SingleBinary
   loki:
     auth_enabled: false
-    config: |
-      auth_enabled: false
-      server:
-        http_listen_port: 3100
-        grpc_listen_port: 9095
-      common:
-        path_prefix: /tmp/loki
-        storage:
-          filesystem:
-            chunks_directory: /tmp/loki/chunks
-            rules_directory: /tmp/loki/rules
-        replication_factor: 1
-      schema_config:
-        configs:
-          - from: 2020-10-24
-            store: boltdb-shipper
-            object_store: filesystem
-            schema: v11
-            index:
-              prefix: index_
-              period: 24h
-      storage_config:
-        boltdb_shipper:
-          active_index_directory: /tmp/loki/boltdb-shipper-active
-          cache_location: /tmp/loki/boltdb-shipper-cache
-          shared_store: filesystem
-        filesystem:
-          directory: /tmp/loki/chunks
-      compactor:
-        working_directory: /tmp/loki
-      limits_config:
-        reject_old_samples: true
-        reject_old_samples_max_age: 168h
-      chunk_store_config:
-        max_look_back_period: 0s
-      table_manager:
-        retention_deletes_enabled: false
-        retention_period: 0s
-      ruler:
-        storage:
-          type: local
-          local:
-            directory: /tmp/loki/rules
-        rule_path: /tmp/loki/rules
-        alertmanager_url: http://localhost:9093
-        ring:
-          kvstore:
-            store: inmemory
-        enable_api: true
+    useTestSchema: true
+    commonConfig:
+      path_prefix: /tmp/loki
+      replication_factor: 1
   singleBinary:
     replicas: 1
     persistence:
