--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -8,6 +8,10 @@ loki:
     commonConfig:
       path_prefix: /tmp/loki
       replication_factor: 1
+      storage:
+        filesystem:
+          chunks_directory: /tmp/loki/chunks
+          rules_directory: /tmp/loki/rules
     storage:
       type: filesystem
       bucketNames:
