--- a/infra/addons/loki/templates/service.yaml
+++ b/infra/addons/loki/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: loki
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.Namespace }}
 spec:
   selector:
     app: loki
