update Promtail Configuration:

--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -19,6 +19,10 @@ kube-prometheus-stack:
         isDefault: false
         jsonData:
           maxLines: 1000
+          timeout: 60
+          httpHeaderName1: 'X-Scope-OrgID'
+        secureJsonData:
+          httpHeaderValue1: '1'
         editable: true
   
   # Prometheus settings for DEV (smaller resources)
