Update NameSpace with namspace for loki template - spell fix

--- a/infra/addons/loki/templates/promtail-configmap.yaml
+++ b/infra/addons/loki/templates/promtail-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: promtail-config
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Values.namespace }}
 data:
   config.yaml: |
     server:
