--- a/infra/addons/loki/templates/configmap.yaml
+++ b/infra/addons/loki/templates/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: loki-config
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Values.namespace }}
 data:
   config.yaml: |
     auth_enabled: false
