--- a/infra/addons/loki/templates/promtail-daemonset.yaml
+++ b/infra/addons/loki/templates/promtail-daemonset.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: promtail
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     matchLabels:
