--- a/infra/addons/loki/templates/promtail-rbac.yaml
+++ b/infra/addons/loki/templates/promtail-rbac.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: promtail
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Values.namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: promtail-{{ .Values.Namespace }}
+  name: promtail-{{ .Values.namespace }}
 rules:
   - apiGroups: [""]
     resources: ["pods", "nodes", "nodes/proxy", "services", "endpoints"]
@@ -16,12 +16,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: promtail-{{ .Values.Namespace }}
+  name: promtail-{{ .Values.namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: promtail-{{ .Values.Namespace }}
+  name: promtail-{{ .Values.namespace }}
 subjects:
   - kind: ServiceAccount
     name: promtail
-    namespace: {{ .Values.Namespace }}
+    namespace: {{ .Values.namespace }}
