--- a/infra/addons/loki/templates/promtail-rbac.yaml
+++ b/infra/addons/loki/templates/promtail-rbac.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: promtail
+  name: promtail-{{ .Values.namespace }}
   namespace: {{ .Values.namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -23,5 +23,5 @@ roleRef:
   name: promtail-{{ .Values.namespace }}
 subjects:
   - kind: ServiceAccount
-    name: promtail
+    name: promtail-{{ .Values.namespace }}
     namespace: {{ .Values.namespace }}
