--- a/infra/addons/loki/templates/promtail-daemonset.yaml
+++ b/infra/addons/loki/templates/promtail-daemonset.yaml
@@ -23,8 +23,11 @@ spec:
               mountPath: /etc/promtail
             - name: varlog
               mountPath: /var/log
-            - name: containers
+            - name: varlibdockercontainers
               mountPath: /var/lib/docker/containers
+              readOnly: true
+            - name: pods
+              mountPath: /var/log/pods
               readOnly: true
       volumes:
         - name: promtail-config
@@ -33,6 +36,9 @@ spec:
         - name: varlog
           hostPath:
             path: /var/log
-        - name: containers
+        - name: varlibdockercontainers
           hostPath:
             path: /var/lib/docker/containers
+        - name: pods
+          hostPath:
+            path: /var/log/pods
