update path for logs files

--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -68,4 +68,4 @@ promtail:
             action: replace
             separator: /
             target_label: __path__
-            replacement: /var/log/pods/*$1/*.log
+            replacement: /var/log/pods/*$1*/$2/*.log
