--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -71,7 +71,8 @@ promtail:
           - source_labels: [__meta_kubernetes_pod_label_app]
             action: replace
             target_label: app
-          - source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_pod_name, __meta_kubernetes_pod_uid, __meta_kubernetes_pod_container_name]
+          - source_labels: [__meta_kubernetes_pod_uid, __meta_kubernetes_pod_container_name]
             action: replace
+            separator: /
             target_label: __path__
-            replacement: /var/log/pods/$1_$2_$3/$4/0.log
+            replacement: /var/log/pods/*$1*/$2/0.log
